--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,9 +21,10 @@
         "@heroicons/react": "^1.0.6",
         "@sanity/client": "^3.3.2",
         "@sanity/image-url": "^1.0.1",
+        "@sanity/webhook": "^2.0.0",
         "autoprefixer": "^10.4.7",
         "classnames": "^2.3.1",
-        "next": "^12.1.6",
+        "next": "^12.2.0",
         "next-sanity": "^0.5.2",
         "postcss": "^8.4.14",
         "react": "^18.2.0",
