trying to deploy studio to sanity hosted

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -8,6 +8,7 @@
     "license": "MIT",
     "scripts": {
         "start": "sanity start",
+        "deploy": "sanity deploy",
         "build": "sanity build public -y",
         "dev": "sanity start",
         "eslint": "eslint --cache .",
