--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "tsconfig/nextjs.json",
+    "extends": "../../packages/tsconfig/nextjs.json",
     "include": ["./node_modules/@sanity/base/types/**/*.ts", "./**/*.ts", "./**/*.tsx"],
     "exclude": ["node_modules"]
 }
