--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@headlessui/react": "^1.6.5",
         "@heroicons/react": "^1.0.6",
+        "@portabletext/react": "^1.0.6",
         "@sanity/client": "^3.3.2",
         "@sanity/image-url": "^1.0.1",
         "@sanity/webhook": "^2.0.0",
