--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,10 @@
-node_modules
+node_modules/
 .next
-out
-/dist/
-next.config.js
-postcss.config.js
-tailwind.config.js
-.eslintrc.js
-.vscode/
+build
+dist
+*.tsbuildinfo
+*.gitignore
+*.svg
+*.lock
+*.npmignore
+examples/**
