added trip details to camino vip

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,7 +7,10 @@
         "paths": {
             "@/components/*": ["src/components/*"],
             "@/styles/*": ["src/styles/*"],
-            "@/lib/*": ["src/lib/*"]
+            "@/lib/*": ["src/lib/*"],
+            "@/utils/*": ["src/utils/*"],
+            "@/store/*": ["src/store/*"],
+            "@/data/*": ["src/data/*"]
         }
     }
 }
