--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,33 +17,44 @@
         "test": "pnpm prettier && pnpm eslint && pnpm ts"
     },
     "dependencies": {
-        "@headlessui/react": "^1.6.5",
+        "@headlessui/react": "^1.6.6",
         "@heroicons/react": "^1.0.6",
         "@portabletext/react": "^1.0.6",
         "@sanity/client": "^3.3.2",
         "@sanity/image-url": "^1.0.1",
         "@sanity/webhook": "^2.0.0",
         "autoprefixer": "^10.4.7",
-        "classnames": "^2.3.1",
-        "next": "^12.2.0",
-        "next-sanity": "^0.5.2",
+        "clsx": "^1.2.1",
+        "embla-carousel-react": "7.0.0-rc04",
+        "framer-motion": "^6.4.3",
+        "geolib": "^3.3.3",
+        "leaflet-defaulticon-compatibility": "^0.1.1",
+        "leaflet-geosearch": "^3.6.1",
+        "mapbox-gl": "^2.9.1",
+        "next": "^12.2.1",
+        "next-sanity": "^0.6.0",
+        "next-seo": "^5.4.0",
         "postcss": "^8.4.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
+        "react-leaflet": "^4.0.1",
+        "react-map-gl": "^7.0.17",
         "react-photo-gallery": "^8.0.0",
-        "react-youtube": "^9.0.2"
+        "react-youtube": "^9.0.3",
+        "zustand": "4.0.0-rc.1"
     },
     "devDependencies": {
         "@sanity-codegen/types": "^1.0.0-alpha.13",
         "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.2",
-        "@types/node": "^18.0.0",
-        "@types/react": "^18.0.14",
+        "@tailwindcss/typography": "^0.5.3",
+        "@types/mapbox-gl": "^2.7.3",
+        "@types/node": "^18.0.3",
+        "@types/react": "^18.0.15",
         "config": "workspace:*",
-        "prettier-plugin-tailwindcss": "^0.1.11",
+        "prettier-plugin-tailwindcss": "^0.1.12",
         "sanity-codegen": "^0.9.8",
-        "tailwindcss": "^3.1.4",
+        "tailwindcss": "^3.1.5",
         "tsconfig": "workspace:*",
         "typescript": "^4.7.4"
     }
