--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,36 +25,37 @@
         "@sanity/webhook": "^2.0.0",
         "autoprefixer": "^10.4.7",
         "clsx": "^1.2.1",
-        "embla-carousel-react": "7.0.0-rc04",
-        "framer-motion": "^6.4.3",
+        "date-fns": "^2.29.1",
+        "embla-carousel-react": "7.0.0-rc05",
+        "framer-motion": "^6.5.1",
         "geolib": "^3.3.3",
         "leaflet-defaulticon-compatibility": "^0.1.1",
         "leaflet-geosearch": "^3.6.1",
-        "mapbox-gl": "^2.9.1",
-        "next": "^12.2.1",
+        "mapbox-gl": "^2.9.2",
+        "next": "^12.2.3",
         "next-sanity": "^0.6.0",
-        "next-seo": "^5.4.0",
+        "next-seo": "^5.5.0",
         "postcss": "^8.4.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
         "react-leaflet": "^4.0.1",
-        "react-map-gl": "^7.0.17",
+        "react-map-gl": "^7.0.18",
         "react-photo-gallery": "^8.0.0",
         "react-youtube": "^9.0.3",
-        "zustand": "4.0.0-rc.1"
+        "zustand": "4.0.0-rc.4"
     },
     "devDependencies": {
         "@sanity-codegen/types": "^1.0.0-alpha.13",
         "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.4",
         "@types/mapbox-gl": "^2.7.3",
-        "@types/node": "^18.0.3",
+        "@types/node": "^18.6.1",
         "@types/react": "^18.0.15",
         "config": "workspace:*",
         "prettier-plugin-tailwindcss": "^0.1.12",
         "sanity-codegen": "^0.9.8",
-        "tailwindcss": "^3.1.5",
+        "tailwindcss": "^3.1.6",
         "tsconfig": "workspace:*",
         "typescript": "^4.7.4"
     }
