reverted studio to react 17 to make media browser work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"git.ignoreLimitWarning": true
+  "eslint.workingDirectories": ["../apps/web/", "../apps/studio"],
+  "git.ignoreLimitWarning": true
 }
