--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -34,8 +34,8 @@
         "@sanity/vision": "^2.30.1",
         "eslint": "^8.20.0",
         "prop-types": "^15.8",
-        "react": "^18.2",
-        "react-dom": "^18.2",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
         "react-icons": "^4.4.0",
         "sanity-plugin-media": "^1.4.10",
         "styled-components": "^5.3.5"
