--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,17 +43,17 @@
         "react-map-gl": "^7.0.18",
         "react-photo-gallery": "^8.0.0",
         "react-youtube": "^9.0.3",
-        "zustand": "4.0.0-rc.4"
+        "zustand": "4.0.0"
     },
     "devDependencies": {
         "@sanity-codegen/types": "^1.0.0-alpha.13",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/typography": "^0.5.4",
-        "@types/mapbox-gl": "^2.7.3",
+        "@types/mapbox-gl": "^2.7.4",
         "@types/node": "^18.6.1",
         "@types/react": "^18.0.15",
         "config": "workspace:*",
-        "prettier-plugin-tailwindcss": "^0.1.12",
+        "prettier-plugin-tailwindcss": "^0.1.13",
         "sanity-codegen": "^0.9.8",
         "tailwindcss": "^3.1.6",
         "tsconfig": "workspace:*",
