--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,8 @@
     "dependencies": {
         "@headlessui/react": "^1.6.6",
         "@heroicons/react": "^1.0.6",
+        "@hookform/error-message": "^2.0.0",
+        "@hookform/resolvers": "^2.9.7",
         "@portabletext/react": "^1.0.6",
         "@sanity/client": "^3.3.2",
         "@sanity/image-url": "^1.0.1",
@@ -29,6 +31,7 @@
         "embla-carousel-react": "7.0.0-rc05",
         "framer-motion": "^6.5.1",
         "geolib": "^3.3.3",
+        "googleapis": "^105.0.0",
         "leaflet-defaulticon-compatibility": "^0.1.1",
         "leaflet-geosearch": "^3.6.1",
         "mapbox-gl": "^2.9.2",
@@ -38,12 +41,14 @@
         "postcss": "^8.4.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.34.0",
         "react-icons": "^4.4.0",
         "react-leaflet": "^4.0.1",
         "react-map-gl": "^7.0.18",
         "react-photo-gallery": "^8.0.0",
         "react-youtube": "^9.0.3",
         "sharp": "^0.30.7",
+        "yup": "^0.32.11",
         "zustand": "4.0.0"
     },
     "devDependencies": {
